Student notes feature

--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tailwindcss/typography": "^0.5.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "gray-matter": "^4.0.3",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.511.0",
-    "mathlive": "^0.96.0",
-    "next": "latest",
+    "mathlive": "^0.108.2",
+    "next": "^16.1.0",
     "next-themes": "^0.4.6",
     "openai": "^6.8.1",
     "react": "^19.0.0",
@@ -29,8 +32,17 @@
     "react-latex-next": "^3.0.0",
     "react-markdown": "^10.1.0",
     "react-math-keyboard": "^2.0.7",
+    "rehype-highlight": "^7.0.2",
     "rehype-katex": "^7.0.1",
+    "rehype-shiki": "^0.0.9",
+    "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
+    "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-html": "^16.0.1",
     "remark-math": "^6.0.0",
+    "remark-rehype": "^11.1.2",
+    "shiki": "^3.20.0",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
