--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "next": "^16.1.0",
     "next-themes": "^0.4.6",
     "openai": "^6.8.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
     "react-latex-next": "^3.0.0",
     "react-markdown": "^10.1.0",
